online course section done

--- a/index.html
+++ b/index.html
@@ -123,6 +123,68 @@
         <section>
             <div class="container">
                 <h1>Online Courses</h1>
+                <div class="card-deck">
+                    <div class="card">
+                        <img src="Photos/image1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Modern Psychology</h5>
+                            <p class="card-text">Designation</p>
+                            <button class="green-link-button">Buy Course</button>
+                        </div>
+                        <div class="card-footer d-flex justify-content-between">
+
+                            <div>
+                                <img src="icon/calendar.png" alt="">
+                                <p>Start 20 April, 2021</p>
+                            </div>
+
+                            <div>
+                                <img src="icon/people.png" alt="">
+                                <p>60 seats</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="Photos/image2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Modern Psychology</h5>
+                            <p class="card-text">Designation</p>
+                            <button class="green-link-button">Buy Course</button>
+                        </div>
+                        <div class="card-footer d-flex justify-content-between">
+
+                            <div>
+                                <img src="icon/calendar.png" alt="">
+                                <p>Start 20 April, 2021</p>
+                            </div>
+
+                            <div>
+                                <img src="icon/people.png" alt="">
+                                <p>60 seats</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="Photos/image3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Modern Psychology</h5>
+                            <p class="card-text">Designation</p>
+                            <button class="green-link-button">Buy Course</button>
+                        </div>
+                        <div class="card-footer d-flex justify-content-between">
+
+                            <div>
+                                <img src="icon/calendar.png" alt="">
+                                <p>Start 20 April, 2021</p>
+                            </div>
+
+                            <div>
+                                <img src="icon/people.png" alt="">
+                                <p>60 seats</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
