Testimonial section done

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 
         <!-- Online Courses start-->
         <section>
+            <h2 class="title-heading">Online Courses</h2>
             <div class="container">
-                <h1>Online Courses</h1>
                 <div class="card-deck">
                     <div class="card">
                         <img src="Photos/image1.png" class="card-img-top" alt="...">
@@ -191,7 +191,27 @@
         </section>
         <!-- Online Courses end-->
 
+        <!-- Testimonial Section Start -->
+        <section>
+            <h2 class="title-heading">Testimonial</h2>
+            <div class="container testimonial d-flex align-items-center justify-content-center">
 
+                <div class="row">
+                    <div class="col-md-4 d-flex justify-content-end">
+                        <img src="Photos/Man.png" alt="">
+                    </div>
+                    <div class="col-md-8 testimonial-paragraph">
+                        <p>
+                            There are many variations of passages of Lorem Ipsum available, but the
+                            majority have suffered alteration in some form, by injected humour,
+                            or randomised words which don't look even slightly believable.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- Testimonial Section Start -->
 
 
 
