--- a/index.html
+++ b/index.html
@@ -213,6 +213,66 @@
         </section>
         <!-- Testimonial Section Start -->
 
+        <footer>
+            <div class="footer-block">
+                <div class="row">
+                    <div class="col-md-4">
+                        <p>
+                            Millions of people of all ages and from around
+                            the world are improving their lives with us
+                        </p>
+                    </div>
+                    <div class="col-md-2">
+                        <nav class="footer-list">
+                            <ul>
+                                <a href="">
+                                    <li class="footer-list-heading">Course</li>
+                                </a>
+                                <li>Graphic Design</li>
+                                <li>Web Design</li>
+                                <li>Business</li>
+                                <li>Marketing</li>
+                                <li>Engineering</li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="col-md-2">
+                        <nav class="footer-list">
+                            <ul>
+                                <a href="">
+                                    <li class="footer-list-heading">Course</li>
+                                </a>
+                                <li>Graphic Design</li>
+                                <li>Web Design</li>
+                                <li>Business</li>
+                                <li>Marketing</li>
+                                <li>Engineering</li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="col-md-2">
+                        <nav class="footer-list">
+                            <ul>
+                                <a href="">
+                                    <li class="footer-list-heading">Course</li>
+                                </a>
+                                <li>Graphic Design</li>
+                                <li>Web Design</li>
+                                <li>Business</li>
+                                <li>Marketing</li>
+                                <li>Engineering</li>
+                            </ul>
+                        </nav>
+                    </div>
+
+                </div>
+                <div class="copyright-bottom">
+                    <p>Copyright © 2020 Programming-hero.com</p>
+                </div>
+            </div>
+
+        </footer>
+
 
 
 
