stye done except footer

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
         <!-- achievement Section Start -->
-        <section>
+        <section class="content-block">
             <div class="container achievement">
                 <div class="row">
                     <div class="col-md-3">
@@ -120,7 +120,7 @@
 
 
         <!-- Online Courses start-->
-        <section>
+        <section class="content-block">
             <h2 class="title-heading">Online Courses</h2>
             <div class="container">
                 <div class="card-deck">
@@ -219,7 +219,16 @@
                     <div class="col-md-4">
                         <p>
                             Millions of people of all ages and from around
-                            the world are improving their lives with us
+                            the world are improving their lives with us.
+                        </p>
+
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere sequi accusamus porro quas,
+                            autem assumenda vel ratione ut nihil eaque accusantium aut non nam laborum dolorem aliquid
+                            deserunt voluptatum omnis.
+                        </p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere sequi accusamus porro quas,
+                            autem assumenda vel ratione ut nihil eaque accusantium aut non nam laborum dolorem aliquid
+                            deserunt voluptatum omnis.
                         </p>
                     </div>
                     <div class="col-md-2">
@@ -264,11 +273,18 @@
                             </ul>
                         </nav>
                     </div>
+                </div>
+                <hr>
 
+                <div class="d-flex ">
+                    <div class="copyright-bottom">
+                        <p>Copyright © 2020 Programming-hero.com</p>
+                        <a href="">Terms of use</a>
+                        <a href="">Privacy Policy</a>
+                    </div>
                 </div>
-                <div class="copyright-bottom">
-                    <p>Copyright © 2020 Programming-hero.com</p>
-                </div>
+
+
             </div>
 
         </footer>
