--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -60,9 +61,10 @@
                                 <div class="col-md-5 d-flex align-items-center">
                                     <div>
                                         <p><span style="color: red;">Are you ready to Learn?</span></p>
-                                        <h1>Learn With fun</h1>
-                                        <h1>on <span style="color: #21B573;">any schedule</span></h1>
-                                        <p>
+                                        <h1 class="title-text">Learn With fun</h1>
+                                        <h1>on <span style="color: #21B573;">any
+                                                schedule</span></h1>
+                                        <p style="color: #585859; margin: 20px 0px 20px 0;">
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Varius blandit
                                             facilisis quam netus.
                                         </p>
@@ -121,7 +123,7 @@
 
         <!-- Online Courses start-->
         <section class="content-block">
-            <h2 class="title-heading">Online Courses</h2>
+            <h2 class="title-heading" style="color: #413960;">Online Courses</h2>
             <div class="container">
                 <div class="card-deck">
                     <div class="card">
@@ -211,83 +213,120 @@
             </div>
 
         </section>
-        <!-- Testimonial Section Start -->
+        <!-- Testimonial Section End -->
+
+
 
         <footer>
+
             <div class="footer-block">
                 <div class="row">
                     <div class="col-md-4">
+                        <h3>E School Resources</h3>
                         <p>
                             Millions of people of all ages and from around
-                            the world are improving their lives with us.
+                            the world are improving their lives with us. Lorem ipsum, dolor sit amet consectetur
+                            adipisicing elit. Vel, architecto!
                         </p>
+                        <h4>Weekly Newsletter</h4>
+                        <input type="email" name="email" placeholder="Enter your email" class="email-input">
+                        <button type="submit" class="green-link-button" ">Submit</button>
 
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere sequi accusamus porro quas,
-                            autem assumenda vel ratione ut nihil eaque accusantium aut non nam laborum dolorem aliquid
-                            deserunt voluptatum omnis.
-                        </p>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere sequi accusamus porro quas,
-                            autem assumenda vel ratione ut nihil eaque accusantium aut non nam laborum dolorem aliquid
-                            deserunt voluptatum omnis.
-                        </p>
+                    </div>
+                    <div class=" col-md-2">
+                            <nav class="footer-list">
+                                <ul>
+                                    <li><a href="" class="footer-list-heading">Course</a></li>
+                                    <hr class="footer-underline">
+                                    <li><a href="">Graphic Design</a></li>
+                                    <li><a href="">Web Design</a></li>
+                                    <li><a href="">Business</a></li>
+                                    <li><a href="">Marketing</a></li>
+                                    <li><a href="">Engineering</a></li>
+                                </ul>
+                            </nav>
                     </div>
                     <div class="col-md-2">
                         <nav class="footer-list">
                             <ul>
-                                <a href="">
-                                    <li class="footer-list-heading">Course</li>
-                                </a>
-                                <li>Graphic Design</li>
-                                <li>Web Design</li>
-                                <li>Business</li>
-                                <li>Marketing</li>
-                                <li>Engineering</li>
+                                <li><a href="" class="footer-list-heading">Terms</a></li>
+                                <hr class="footer-underline">
+                                <li><a href="">Graphic Design</a></li>
+                                <li><a href="">Web Design</a></li>
+                                <li><a href="">Business</a></li>
+                                <li><a href="">Marketing</a></li>
+                                <li><a href="">Engineering</a></li>
                             </ul>
                         </nav>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-3">
                         <nav class="footer-list">
                             <ul>
-                                <a href="">
-                                    <li class="footer-list-heading">Course</li>
-                                </a>
-                                <li>Graphic Design</li>
-                                <li>Web Design</li>
-                                <li>Business</li>
-                                <li>Marketing</li>
-                                <li>Engineering</li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="col-md-2">
-                        <nav class="footer-list">
-                            <ul>
-                                <a href="">
-                                    <li class="footer-list-heading">Course</li>
-                                </a>
-                                <li>Graphic Design</li>
-                                <li>Web Design</li>
-                                <li>Business</li>
-                                <li>Marketing</li>
-                                <li>Engineering</li>
+                                <li><a href="" class="footer-list-heading">Contact us</a></li>
+                                <hr class="footer-underline">
+
+                                <li><i class=" fas fa-home mr-3"></i> New York, NY 10012, US</li>
+                                <li>
+                                    <a href="mailto:example@yourdomain.com"><i class="fas fa-envelope mr-3"></i>
+                                        info@example.com</a>
+                                </li>
+                                <li><i class="fas fa-phone mr-3"></i> + 01 234 567 88</li>
+                                <li><i class="fas fa-print mr-3"></i> + 01 234 567 89</li>
                             </ul>
                         </nav>
                     </div>
                 </div>
                 <hr>
 
-                <div class="d-flex ">
-                    <div class="copyright-bottom">
-                        <p>Copyright © 2020 Programming-hero.com</p>
-                        <a href="">Terms of use</a>
-                        <a href="">Privacy Policy</a>
-                    </div>
+                <!-- Social buttons -->
+                <div>
+                    <ul class="list-unstyled list-inline text-left">
+
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-fb mx-1" href="https://www.facebook.com/" target="_blank">
+                                <i class="fab fa-facebook-f"> </i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-tw mx-1">
+                                <i class="fab fa-twitter"> </i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-gplus mx-1">
+                                <i class="fab fa-google-plus-g"> </i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-li mx-1">
+                                <i class="fab fa-linkedin-in"> </i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a class="btn-floating btn-dribbble mx-1">
+                                <i class="fab fa-dribbble"> </i>
+                            </a>
+                        </li>
+                    </ul>
+                    <!-- Social buttons -->
                 </div>
+                <hr>
+
+
+
+                <!-- Copyright -->
+                <div class="footer-copyright text-center py-3">Copyright © 2020
+                    <a href="https://programming-hero.com/" target="_blank" id="footer-backlink">
+                        Programming-hero.com</a>
+                </div>
+                <!-- Copyright -->
 
 
             </div>
 
         </footer>
+
+
 
 
 
