--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light ">
                     <a class="navbar-brand" href="#">
-                        <img src="icon/Logo.png" alt="">
+                        <img src="ICON/Logo.png" alt="">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -89,28 +89,28 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="item-1">
-                            <img src="icon/book.png" alt="">
+                            <img src="ICON/book.png" alt="">
                             <h3>1500+ Topic</h3>
                             <p>Learn Anythings</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="item-1">
-                            <img src="icon/calendar.png" alt="">
+                            <img src="ICON/calendar.png" alt="">
                             <h3>1800+ Students</h3>
                             <p>Learn Anythings</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="item-1">
-                            <img src="icon/Test.png" alt="">
+                            <img src="ICON/Test.png" alt="">
                             <h3>9K+ Test Token</h3>
                             <p>Learn Anythings</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="item-1">
-                            <img src="icon/Students.png" alt="">
+                            <img src="ICON/Students.png" alt="">
                             <h3>2000+ Student</h3>
                             <p>Learn Anythings</p>
                         </div>
@@ -136,12 +136,12 @@
                         <div class="card-footer d-flex justify-content-between">
 
                             <div>
-                                <img src="icon/calendar.png" alt="">
+                                <img src="ICON/calendar.png" alt="">
                                 <p>Start 20 April, 2021</p>
                             </div>
 
                             <div>
-                                <img src="icon/people.png" alt="">
+                                <img src="ICON/people.png" alt="">
                                 <p>60 seats</p>
                             </div>
                         </div>
@@ -156,12 +156,12 @@
                         <div class="card-footer d-flex justify-content-between">
 
                             <div>
-                                <img src="icon/calendar.png" alt="">
+                                <img src="ICON/calendar.png" alt="">
                                 <p>Start 20 April, 2021</p>
                             </div>
 
                             <div>
-                                <img src="icon/people.png" alt="">
+                                <img src="ICON/people.png" alt="">
                                 <p>60 seats</p>
                             </div>
                         </div>
@@ -176,12 +176,12 @@
                         <div class="card-footer d-flex justify-content-between">
 
                             <div>
-                                <img src="icon/calendar.png" alt="">
+                                <img src="ICON/calendar.png" alt="">
                                 <p>Start 20 April, 2021</p>
                             </div>
 
                             <div>
-                                <img src="icon/people.png" alt="">
+                                <img src="ICON/people.png" alt="">
                                 <p>60 seats</p>
                             </div>
                         </div>
