--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Taib Islam Dipu : E-School Resources -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -22,7 +24,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light ">
                     <a class="navbar-brand" href="#">
-                        <img src="ICON/Logo.png" alt="">
+                        <img src="ICON/Logo.png" alt="logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,7 +74,8 @@
                                     </div>
                                 </div>
                                 <div class="col-md-7">
-                                    <img src="Photos/Illustration.png" class="img-fluid d-block w-100" alt="...">
+                                    <img src="Photos/Illustration.png" class="img-fluid d-block w-100"
+                                        alt="Illustration">
                                 </div>
                             </div>
                         </div>
@@ -89,28 +92,28 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="item-1">
-                            <img src="ICON/book.png" alt="">
+                            <img src="ICON/book.png" alt="book">
                             <h3>1500+ Topic</h3>
                             <p>Learn Anythings</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="item-1">
-                            <img src="ICON/calendar.png" alt="">
+                            <img src="ICON/calendar.png" alt="Calendar">
                             <h3>1800+ Students</h3>
                             <p>Learn Anythings</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="item-1">
-                            <img src="ICON/Test.png" alt="">
+                            <img src="ICON/Test.png" alt="Test">
                             <h3>9K+ Test Token</h3>
                             <p>Learn Anythings</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="item-1">
-                            <img src="ICON/Students.png" alt="">
+                            <img src="ICON/Students.png" alt="Students">
                             <h3>2000+ Student</h3>
                             <p>Learn Anythings</p>
                         </div>
@@ -127,7 +130,7 @@
             <div class="container">
                 <div class="card-deck">
                     <div class="card">
-                        <img src="Photos/image1.png" class="card-img-top" alt="...">
+                        <img src="Photos/image1.png" class="card-img-top" alt="Psychology Image">
                         <div class="card-body">
                             <h5 class="card-title">Modern Psychology</h5>
                             <p class="card-text">Designation</p>
@@ -136,18 +139,18 @@
                         <div class="card-footer d-flex justify-content-between">
 
                             <div>
-                                <img src="ICON/calendar.png" alt="">
+                                <img src="ICON/calendar.png" alt="calendar">
                                 <p>Start 20 April, 2021</p>
                             </div>
 
                             <div>
-                                <img src="ICON/people.png" alt="">
+                                <img src="ICON/people.png" alt="people">
                                 <p>60 seats</p>
                             </div>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="Photos/image2.png" class="card-img-top" alt="...">
+                        <img src="Photos/image2.png" class="card-img-top" alt="Psychology Subject">
                         <div class="card-body">
                             <h5 class="card-title">Modern Psychology</h5>
                             <p class="card-text">Designation</p>
@@ -156,18 +159,18 @@
                         <div class="card-footer d-flex justify-content-between">
 
                             <div>
-                                <img src="ICON/calendar.png" alt="">
+                                <img src="ICON/calendar.png" alt="calendar">
                                 <p>Start 20 April, 2021</p>
                             </div>
 
                             <div>
-                                <img src="ICON/people.png" alt="">
+                                <img src="ICON/people.png" alt="people">
                                 <p>60 seats</p>
                             </div>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="Photos/image3.png" class="card-img-top" alt="...">
+                        <img src="Photos/image3.png" class="card-img-top" alt="Psychology Subject">
                         <div class="card-body">
                             <h5 class="card-title">Modern Psychology</h5>
                             <p class="card-text">Designation</p>
@@ -176,12 +179,12 @@
                         <div class="card-footer d-flex justify-content-between">
 
                             <div>
-                                <img src="ICON/calendar.png" alt="">
+                                <img src="ICON/calendar.png" alt="calendar">
                                 <p>Start 20 April, 2021</p>
                             </div>
 
                             <div>
-                                <img src="ICON/people.png" alt="">
+                                <img src="ICON/people.png" alt="people">
                                 <p>60 seats</p>
                             </div>
                         </div>
@@ -200,7 +203,7 @@
 
                 <div class="row">
                     <div class="col-md-4 d-flex justify-content-end">
-                        <img src="Photos/Man.png" alt="">
+                        <img src="Photos/Man.png" alt="Man">
                     </div>
                     <div class="col-md-8 testimonial-paragraph">
                         <p>
