--- a/index.html
+++ b/index.html
@@ -89,31 +89,31 @@
         <!-- achievement Section Start -->
         <section class="content-block">
             <div class="container achievement">
-                <div class="row">
+                <div class="row d-flex align-items-center">
                     <div class="col-md-3">
-                        <div class="item-1">
-                            <img src="ICON/book.png" alt="book">
+                        <div class="item-1 d-flex justify-content-between align-items-center flex-column">
+                            <img src="ICON/book.png" alt="book" class="w-25">
                             <h3>1500+ Topic</h3>
                             <p>Learn Anythings</p>
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="item-1">
-                            <img src="ICON/calendar.png" alt="Calendar">
+                        <div class="item-1 d-flex align-items-center justify-content-between flex-column">
+                            <img src="ICON/Student.png" alt="Calendar" class="w-25">
                             <h3>1800+ Students</h3>
                             <p>Learn Anythings</p>
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="item-1">
-                            <img src="ICON/Test.png" alt="Test">
+                        <div class="item-1 d-flex align-items-center justify-content-between flex-column">
+                            <img src="ICON/Test.png" alt="Test" class="w-25">
                             <h3>9K+ Test Token</h3>
                             <p>Learn Anythings</p>
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="item-1">
-                            <img src="ICON/Students.png" alt="Students">
+                        <div class="item-1 d-flex align-items-center justify-content-between flex-column">
+                            <img src="ICON/Students.png" alt="Students" class="w-25">
                             <h3>2000+ Student</h3>
                             <p>Learn Anythings</p>
                         </div>
