--- a/index.html
+++ b/index.html
@@ -89,31 +89,31 @@
         <!-- achievement Section Start -->
         <section class="content-block">
             <div class="container achievement">
-                <div class="row">
+                <div class="row d-flex align-items-center">
                     <div class="col-md-3">
-                        <div class="item-1">
-                            <img src="ICON/book.png" alt="book">
+                        <div class="item-1 d-flex justify-content-between align-items-center flex-column">
+                            <img src="ICON/book.png" alt="book" class="w-25">
                             <h3>1500+ Topic</h3>
                             <p>Learn Anythings</p>
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="item-1">
-                            <img src="ICON/calendar.png" alt="Calendar">
+                        <div class="item-1 d-flex align-items-center justify-content-between flex-column">
+                            <img src="ICON/Student.png" alt="Calendar" class="w-25">
                             <h3>1800+ Students</h3>
                             <p>Learn Anythings</p>
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="item-1">
-                            <img src="ICON/Test.png" alt="Test">
+                        <div class="item-1 d-flex align-items-center justify-content-between flex-column">
+                            <img src="ICON/Test.png" alt="Test" class="w-25">
                             <h3>9K+ Test Token</h3>
                             <p>Learn Anythings</p>
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="item-1">
-                            <img src="ICON/Students.png" alt="Students">
+                        <div class="item-1 d-flex align-items-center justify-content-between flex-column">
+                            <img src="ICON/Students.png" alt="Students" class="w-25">
                             <h3>2000+ Student</h3>
                             <p>Learn Anythings</p>
                         </div>
@@ -219,7 +219,9 @@
         <!-- Testimonial Section End -->
 
 
+
         <footer>
+
             <div class="footer-block">
                 <div class="row">
                     <div class="col-md-4">
@@ -313,6 +315,8 @@
                 </div>
                 <hr>
 
+
+
                 <!-- Copyright -->
                 <div class="footer-copyright text-center py-3">Copyright © 2020
                     <a href="https://programming-hero.com/" target="_blank" id="footer-backlink">
@@ -320,9 +324,37 @@
                 </div>
                 <!-- Copyright -->
 
+
             </div>
 
         </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
