--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
             <h2 class="title-heading">Testimonial</h2>
             <div class="container testimonial d-flex align-items-center justify-content-center">
 
-                <div class="row">
-                    <div class="col-md-4 d-flex justify-content-end">
-                        <img src="Photos/Man.png" alt="Man">
+                <div class="row justify-content-center align-items-center">
+                    <div class="col-md-2">
+                        <img src="Photos/Man.png" alt="Man" class="img">
                     </div>
-                    <div class="col-md-8 testimonial-paragraph">
+                    <div class="col-md-6 testimonial-paragraph">
                         <p>
                             There are many variations of passages of Lorem Ipsum available, but the
                             majority have suffered alteration in some form, by injected humour,
@@ -217,8 +217,6 @@
 
         </section>
         <!-- Testimonial Section End -->
-
-
 
         <footer>
 
@@ -324,35 +322,9 @@
                 </div>
                 <!-- Copyright -->
 
-
             </div>
 
         </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
